--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>Col congue sed tempus</h2>
-							<p>Non curae est ut consectetur ac auctor morbi.<br />
+							<h2>Torcat Fiber & Data</h2>
+							<p>054-85 07 50<br />
 							Quam morbi. Arcu at nullam accumsan nulla.</p>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
