--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<div class="content">
 						<header>
 							<h2>Torcat Fiber & Data</h2>
-							<p>Telefon: 054-85 07 50</p>
+							<span class="icon solid alt major fa-phone"></span><h3> 054-85 07 50</h3>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
