--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<div class="content">
 						<header>
 							<h2>Torcat Fiber & Data</h2>
-							<span class="icon solid alt minor fa-phone"><h3> 054-85 07 50</h3></span>
+							<span class="icon solid alt minor fa-phone">Tele: 054-85 07 50</span>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
