--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 					<div class="content">
 						<header>
 							<h2>Torcat Fiber & Data</h2>
-							<span class="icon solid alt minor fa-phone"> 054-85 07 50</span>
+							<span class="icon solid alt minor fa-phone"> 054-85 07 50</span><br>
+							<span class="icon solid alt minor fa-at"> info@torcat.se</span>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
