--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 					<div class="content">
 						<header>
 							<h2>Torcat Fiber & Data</h2>
-							<span class="icon solid alt minor fa-phone">&nbsp;&nbsp;054-85 07 50</span><br>
-							<span class="icon solid alt minor fa-at">&nbsp;&nbsp;info@torcat.se</span>
+							<span class="icon solid alt minor fa-phone">&nbsp;&nbsp;<h2>054-85 07 50</h2></span><br>
+							<span class="icon solid alt minor fa-at">&nbsp;&nbsp;<h2>info@torcat.se</h2></span>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
