--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 					<div class="content">
 						<header>
 							<h2>Torcat Fiber & Data</h2>
-							<span class="icon solid alt minor fa-phone">&nbsp;&nbsp;<h3>054-85 07 50</h3></span><br>
-							<span class="icon solid alt minor fa-at">&nbsp;&nbsp;<h3>info@torcat.se</h3></span>
+							<span class="icon solid alt minor fa-phone">&nbsp;&nbsp;<b>054-85 07 50</b></span><br>
+							<span class="icon solid alt minor fa-at">&nbsp;&nbsp;<b>info@torcat.se</b></span>
 						</header>
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 					</div>
