--- a/index.html
+++ b/index.html
@@ -32,23 +32,16 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Välkommen till Torcat</h2>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>Torcat är ett installationsföretag som levererar och installerar kompletta nätverk, fibersvetsning, datorhallar, UPS och presentations anläggningar. Vi arbetar med certifierade nätverk med 25 års Komponentgaranti och Systemgaranti. Samtliga våra installatörer är certifierade. Vi installerar även larmanläggningar.
+
+										Torcat gör nyckelfärdiga dataanläggningar från ett komplett datarum till användare, med leverans av både aktiva som passiva komponenter som ingår i ett komplett datanät i samarbete med ATEA..</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>Vårt verksamhetsområde är i första hand i Värmland, men i begränsad omfattning åker vi även på installationer i övriga Sverige. .</p>
 								</div>
 							</div>
 						</div>
