--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 								</div>
 								<div class="col-4 col-12-medium">
 									<p>Torcat är ett installationsföretag som levererar och installerar kompletta nätverk, fibersvetsning, datorhallar, UPS och presentations anläggningar. Vi arbetar med certifierade nätverk med 25 års Komponentgaranti och Systemgaranti. Samtliga våra installatörer är certifierade. Vi installerar även larmanläggningar.
-
-										Torcat gör nyckelfärdiga dataanläggningar från ett komplett datarum till användare, med leverans av både aktiva som passiva komponenter som ingår i ett komplett datanät i samarbete med ATEA..</p>
+									</p>
 								</div>
 								<div class="col-4 col-12-medium">
+									<p>Torcat gör nyckelfärdiga dataanläggningar från ett komplett datarum till användare, med leverans av både aktiva som passiva komponenter som ingår i ett komplett datanät i samarbete med ATEA..</p>
 									<p>Vårt verksamhetsområde är i första hand i Värmland, men i begränsad omfattning åker vi även på installationer i övriga Sverige. .</p>
 								</div>
 							</div>
