--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
-									<h3>Mätning/h3>
+									<h3>Mätning</h3>
 									<p>Vi har egna mätinstrument för både fiber och datakabel</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
