--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-lock"></span>
-									<h3>Elinstallation/h3>
+									<h3>Elinstallation</h3>
 									<p>Vi har behörighet att utföra installationer</p>
 								</section>
 							</div>
