--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-flask"></span>
 									<h3>Data</h3>
-									<p>Vi drar datakabel och kontakterar.</p>
+									<p>Vi drar datakabel och kontakterar</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-paper-plane"></span>
