--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
 									<p>Vi kan både blåsa och svetsa fiber, till både privatperson och företag</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-comment"></span>
+									<span class="icon solid alt major fa-tachograph-digital"></span>
 									<h3>Mätning</h3>
 									<p>Vi har egna mätinstrument för både fiber och datakabel</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-flask"></span>
+									<span class="icon solid alt major fa-ethernet"></span>
 									<h3>Data</h3>
 									<p>Vi drar datakabel och kontakterar</p>
 								</section>
@@ -111,7 +111,7 @@
 									<p>Vi hjälper till att installera ditt inbrotts/brandlarm</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-file"></span>
+									<span class="icon solid alt major fa-router"></span>
 									<h3>Hårdvara</h3>
 									<p>Vi hjälper till att komma igång med ditt nätverk</p>
 								</section>
