added more icons

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 									<p>Vi drar datakabel och kontakterar</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-paper-plane"></span>
+									<span class="icon solid alt major fa-bell-exclamation"></span>
 									<h3>Larm</h3>
 									<p>Vi hjälper till att installera ditt inbrotts/brandlarm</p>
 								</section>
@@ -116,7 +116,7 @@
 									<p>Vi hjälper till att komma igång med ditt nätverk</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lock"></span>
+									<span class="icon solid alt major fa-lightbulb-on"></span>
 									<h3>Elinstallation</h3>
 									<p>Vi har behörighet att utföra installationer</p>
 								</section>
