--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<div class="box alt">
 							<div class="row gtr-uniform">
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-chart-area"></span>
+									<span class="icon solid alt major fa-asterisk"></span>
 									<h3>Fiber</h3>
 									<p>Vi kan både blåsa och svetsa fiber, till både privatperson och företag</p>
 								</section>
