--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									<p>Vi kan både blåsa och svetsa fiber, till både privatperson och företag</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-tachograph-digital"></span>
+									<span class="icon solid alt major fa-digital-tachograph"></span>
 									<h3>Mätning</h3>
 									<p>Vi har egna mätinstrument för både fiber och datakabel</p>
 								</section>
