changed to free icons

--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
 									<p>Vi drar datakabel och kontakterar</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-bell-exclamation"></span>
+									<span class="icon solid alt major fa-bell"></span>
 									<h3>Larm</h3>
 									<p>Vi hjälper till att installera ditt inbrotts/brandlarm</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-router"></span>
+									<span class="icon solid alt major fa-server"></span>
 									<h3>Hårdvara</h3>
 									<p>Vi hjälper till att komma igång med ditt nätverk</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon solid alt major fa-lightbulb-on"></span>
+									<span class="icon solid alt major fa-lightbulb"></span>
 									<h3>Elinstallation</h3>
 									<p>Vi har behörighet att utföra installationer</p>
 								</section>
