--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/one.jpeg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -51,7 +51,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit main"><img src="images/two.jpeg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Tjänster</h2>
@@ -68,7 +68,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="images/three.jpeg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Om Torcat</h2>
