--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 							<span class="icon solid alt minor fa-phone">&nbsp;&nbsp;<b>054-85 07 50</b></span><br>
 							<span class="icon solid alt minor fa-at">&nbsp;&nbsp;<b>info@torcat.se</b></span>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="images/logo.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
