added ATEA link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Torcat gör nyckelfärdiga dataanläggningar från ett komplett datarum till användare, med leverans av både aktiva som passiva komponenter som ingår i ett komplett datanät i samarbete med ATEA..</p>
+									<p>Torcat gör nyckelfärdiga dataanläggningar från ett komplett datarum till användare, med leverans av både aktiva som passiva komponenter som ingår i ett komplett datanät i samarbete med <a href="https://www.atea.se/">ATEA</a>.</p>
 									<p>Vårt verksamhetsområde är i första hand i Värmland, men i begränsad omfattning åker vi även på installationer i övriga Sverige. .</p>
 								</div>
 							</div>
